opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/expect_test_helpers_kernel"
bug-reports: "https://github.com/janestreet/expect_test_helpers_kernel/issues"
dev-repo: "https://github.com/janestreet/expect_test_helpers_kernel.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build-package" "expect_test_helpers_kernel" "-j" jobs]
]
depends: [
  "core_kernel"
  "jbuilder"
  "ppx_driver"
  "ppx_jane"
  "sexp_pretty"
  "re"          {>= "1.5.0"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Helpers for writing expectation tests

This library provides helper functions for writing expect tests.

If you want helpers for writing expect tests using the Async library,
look at expect_test_helpers.
"
