opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/expect_test_helpers_kernel"
bug-reports: "https://github.com/janestreet/expect_test_helpers_kernel/issues"
dev-repo: "git+https://github.com/janestreet/expect_test_helpers_kernel.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_driver"
  "ppx_jane"
  "sexp_pretty"
  "ocaml-migrate-parsetree" {>= "0.4"}
  "re"                      {>= "1.5.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Helpers for writing expectation tests

This library provides helper functions for writing expect tests.

If you want helpers for writing expect tests using the Async library,
look at expect_test_helpers.
"
